infrastructure/platform/base/forgejo-runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo-runners
  labels:
    vector.io/exclude: "true"
